Add word count to cover letter and render it.

--- a/submissions/jors/cover_letter/main.tex
+++ b/submissions/jors/cover_letter/main.tex
@@ -45,6 +45,8 @@ the data.
 This approach could be readily used in similar modelling exercises
 where accurate service length data is not available.
 
+The word count for this manuscript (calculated with \texttt{texcount}) is 6,960.
+
 \closing{Sincerely,}
 
 \end{letter}
